# computational-intelligence-22-23

./: LICENSE  README.md  pyproject.toml
lab01/: README.md  lab1_set-covering.ipynb
lab1/: README.md  lab1_set-covering.ipynb
lab2/: README.md  lab2_set-covering_EA.ipynb
lab3/: README.md  lab3_nim.ipynb  lab3_nim_minmax.ipynb  lab3_nim_rl.ipynb  nim_environment.py  nim_utils.py  rl_agent.py
playground/: README.md  exercise_populations.ipynb  lab1_set-covering_prof_sol.ipynb  lab3_nim_before_cahnges.ipynb  minMax.ipynb  rastrigin.ipynb  reviewing.ipynb  reviewing_lab2.ipynb
